updated missionDetails, and linked it to the postAccepted page

--- a/Availabilities (seek help).html
+++ b/Availabilities (seek help).html
@@ -46,43 +46,6 @@
         }
 
 
-        #button1 {
-
-            position: absolute;
-            top: 87%;
-            left: 22%;
-            transform: translate(-50%, -50%);
-            width: 190px;
-            height: 50px;
-            background-color: white
-        }
-
-        #button2 {
-
-            position: absolute;
-            top: 87%;
-            left: 33%;
-            transform: translate(-50%, -50%);
-            width: 190px;
-            height: 50px;
-            background-color: white
-        }
-
-        #button3 {
-
-            position: absolute;
-            top: 87%;
-            left: 77%;
-            transform: translate(-50%, -50%);
-            width: 190px;
-            height: 50px;
-            background-color: white
-        }
-
-        #buttons {
-            margin-top: 600px;
-        }
-
         .pset {
             font-size: 20px;
             text-align: center;
@@ -176,113 +139,106 @@
             </tr>
             <tr>
                 <td Class="tableTime">9:00-10:00AM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M900"></td>
+                <td id="T900"></td>
+                <td id="W900"></td>
+                <td id="Th900"></td>
+                <td id="F900"></td>
+                <td id="S900"></td>
+                <td id="Su900"></td>
             </tr>
 
             <tr>
                 <td Class="tableTime">10:00-11:00AM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1000"></td>
+                <td id="T1000"></td>
+                <td id="W1000"></td>
+                <td id="Th1000"></td>
+                <td id="F1000"></td>
+                <td id="S1000"></td>
+                <td id="Su1000"></td>
             </tr>
             <tr>
                 <td Class="tableTime">11:00-12:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1100"></td>
+                <td id="T1100"></td>
+                <td id="W1100"></td>
+                <td id="Th1100"></td>
+                <td id="F1100"></td>
+                <td id="S1100"></td>
+                <td id="Su1100"></td>
             </tr>
             <tr>
                 <td Class="tableTime">1:00-2:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1200"></td>
+                <td id="T1200"></td>
+                <td id="W1200"></td>
+                <td id="Th1200"></td>
+                <td id="F1200"></td>
+                <td id="S1200"></td>
+                <td id="Su1200"></td>
             </tr>
             <tr>
                 <td Class="tableTime">2:00-3:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1300"></td>
+                <td id="T1300"></td>
+                <td id="W1300"></td>
+                <td id="Th1300"></td>
+                <td id="F1300"></td>
+                <td id="S1300"></td>
+                <td id="Su1300"></td>
             </tr>
             <tr>
                 <td Class="tableTime">3:00-4:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1400"></td>
+                <td id="T1400"></td>
+                <td id="W1400"></td>
+                <td id="Th1400"></td>
+                <td id="F1400"></td>
+                <td id="S1400"></td>
+                <td id="Su1400"></td>
             </tr>
             <tr>
                 <td Class="tableTime">4:00-5:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1500"></td>
+                <td id="T1500"></td>
+                <td id="W1500"></td>
+                <td id="Th1500"></td>
+                <td id="F1500"></td>
+                <td id="S1500"></td>
+                <td id="Su1500"></td>
             </tr>
             <tr>
                 <td Class="tableTime">5:00-6:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td id="M1600"></td>
+                <td id="T1600"></td>
+                <td id="W1600"></td>
+                <td id="Th1600"></td>
+                <td id="F1600"></td>
+                <td id="S1600"></td>
+                <td id="Su1600"></td>
             </tr>
-            <tr>
-                <td Class="tableTime">6:00-7:00PM</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
+
 
         </table>
 
+        <br>
 
-        <div id="buttons">
+        <div class="d-flex justify-content-end">
 
             <a href="postDetails.html">
-                <button id="button1" type="button" class="btn btn-outline-dark">
+                <button id="button1" type="button" class="btn btn-lg btn-primary pull-left">
                     <p class="pset"><b>Back</b></p>
                 </button>
             </a>
-
+            &nbsp; &nbsp; &nbsp;
             <a href="missionPosted.html">
-                <button id="button2" type="button" class="btn btn-outline-dark">
+                <button id="button2" type="button" class="btn btn-lg btn-primary pull-right" onclick="saveToggles()">
                     <p class="pset"><b>Post</b></p>
                 </button>
             </a>
         </div>
+
 
 
         <br>
@@ -343,14 +299,17 @@
 
 
 
-        // function saveSlot() {
-        //     var slotRef = db.collection("Hikes");
-
-        //     slotRef.add({
-        //         Morning: "false",
-        //         Afternoon: "false",   
-        //         Evening: "false"
-        //     }
+        function saveToggles(postid) {
+            //get all the toggled divs into an array
+            var toggles = ["M800", "M900", "M1000", "W800", "W900", "W1000", "F800", "F900", "F1000"];
+            toggles.forEach(item => {
+                console.log(item);
+                db.collection("posts").doc(postid).set({
+                    availability: firebase.firestore.FieldValue.arrayUnion(item)
+                }, { merge: true });
+            })
+        }
+        saveToggles("pmsMtRGt4BXHM764oqIjGzgd2PR2");
 
 
 
