--- a/missionBoard.html
+++ b/missionBoard.html
@@ -101,29 +101,37 @@
             <br>
             <tbody>
                 <tr>
+                    <td> <h4> Anyone want to study for Web Dev Final?</h4> </td>
+                    <td> <a href="missionDetails.html">
+                        <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
+                        </a>
+                    </td>
+                </tr>
+
+                <tr>
                     <td> <h4> Looking for english tutor</h4> </td>
-                    <td> <a href="Availabilities (seek help).html">
+                    <td> <a href="missionDetails.html">
                         <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
                         </a>
                     </td>
                 </tr>
                 <tr>
                     <td> <h4>Seeking help for club promotion </h4></td>
-                    <td> <a href="Availabilities (seek help).html">
+                    <td> <a href="missionDetails.html">
                         <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
                         </a>
                     </td>
                 </tr>
                 <tr>
                     <td> <h4>Looking for a campus friend </h4></td>
-                    <td> <a href="Availabilities (seek help).html">
+                    <td> <a href="missionDetails.html">
                         <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
                         </a>
                     </td>
                 </tr>
                 <tr>
                     <td> <h4>Can someone help me understand node.js / asyncronous functions in JavaScript?!</h4></td>
-                    <td> <a href="Availabilities (seek help).html">
+                    <td> <a href="missionDetails.html">
                         <button type="button" class="btn btn-lg btn-primary pull-right" onclick="writePost()">Details </button>
                         </a>
                     </td>
