editted buttons and looks

--- a/Availabilities (seek help).html
+++ b/Availabilities (seek help).html
@@ -40,6 +40,7 @@
             height: 100%;
         }
 
+
         body {
             background-color: rgb(6, 78, 66);
             background-image: linear-gradient(#0F2027, #203A43, #2C5364);
@@ -85,7 +86,7 @@
             vertical-align: middle;
             background-color: rgb(112, 112, 112);
             border: 1px solid #fff;
-
+            color: aliceblue;
 
         }
     </style>
@@ -227,15 +228,11 @@
         <div class="d-flex justify-content-end">
 
             <a href="postDetails.html">
-                <button id="button1" type="button" class="btn btn-lg btn-primary pull-left">
-                    <p class="pset"><b>Back</b></p>
-                </button>
+                <button type="button" class="btn btn-lg btn-primary pull-right">Back </button>
             </a>
             &nbsp; &nbsp; &nbsp;
             <a href="missionPosted.html">
-                <button id="button2" type="button" class="btn btn-lg btn-primary pull-right" onclick="saveToggles()">
-                    <p class="pset"><b>Post</b></p>
-                </button>
+                <button id="button" type="button" class="btn btn-lg btn-primary pull-right" onclick="saveToggles()"> Post  </button>
             </a>
         </div>
 
