--- a/missionBoard.html
+++ b/missionBoard.html
@@ -140,6 +140,9 @@
             </tbody>
         </table>
 
+        <a href="secondary.html">
+            <button type="button" class="btn btn-lg btn-primary pull-right">Back </button>
+        </a>
 
         <footer class="navbar justify-content-evenly fixed-bottom">
             <a href="main.html">
