--- a/missionDetails.html
+++ b/missionDetails.html
@@ -101,10 +101,14 @@
             </div>
             <br>
             <div class="form-group" style="color: white">
-                <label style="color: white">Mission Location</label>
+                <label style="color: white">Mission Time & Location</label>
                 <!-- CONTENT GOES HERE -->
                 <br>
+                Monday: 8-11 AM <br>
+                Wednesday: 8-11 AM <br>
+                Friday: 8-11 AM <br> <br>
                 BCIT SE14 Library 1st floor room 101
+                
             </div>
             <br>
             <div class="form-group" style="color: white">
