--- a/secondary.html
+++ b/secondary.html
@@ -72,6 +72,14 @@
             background-color: white
         }
 
+        #button {
+            position: absolute;
+            top: 85%;
+            left: 33%;
+            transform: translate(-50%, -50%);
+           
+        }
+
         .pset {
             font-size: 30px;
         }
@@ -116,10 +124,10 @@
         <br>
 
         <a href="main.html">
-            <button id="button3" type="button" class="btn btn-outline-dark">
-                <p class="pset"><b>Back</b></p>
-            </button>
+            <button id="button" type="button" class="btn btn-lg btn-primary pull-right">Back </button>
         </a>
+
+   
 
         <br>
 
