--- a/main.html
+++ b/main.html
@@ -90,25 +90,29 @@
         </div>
     </div>
 
+    <br>
+    <br>
+    <div>
+        <h2 id="greeting">Good morning, <span id="name-goes-here"></span></h2>
+    </div>
 
     <div class="container">
 
         <br>
         <br>
         <br>
-        <br>
 
         <div>
             <button id="button1" type="button">
-                <h2> <b> Host Team Meeting </b> </h2>
+                <h3> <b> Host Team Meeting </b> </h3>
             </button>
 
             <br>
-            <br>
+           
 
             <a href="secondary.html">
                 <button id="button2" type="button">
-                    <h2> <b> Get Involved </b></h2>
+                    <h3> <b> Get Involved </b></h3>
                 </button>
             </a>
         </div>
@@ -119,7 +123,7 @@
             <i class="material-icons">home</i>
             <i class="material-icons">info</i>
             <a href="missionBoard.html">
-            <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+                <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
             </a>
             <i class="material-icons">settings</i>
         </footer>
@@ -135,6 +139,33 @@
     <!--------------------------------------------------->
     <!-- Your Javascript Libraries and scripts go here -->
     <!--------------------------------------------------->
+    <script>
+        //function to insert name of the user
+        function insertName() {
+            firebase.auth().onAuthStateChanged(user => {
+                // Check if user is signed in:
+                if (user) {
+                    // Do something for the current logged-in user here:
+                    console.log(user.uid);
+                    //go to the correct user document by referencing to the user uid
+                    currentUser = db.collection("users").doc(user.uid);
+                    //get the document for current user.
+                    currentUser.get()
+                        .then(userDoc => {
+                            var user_Name = userDoc.data().name;
+                            console.log(user_Name);
+                            //method #1:  insert with html only
+                            document.getElementById("name-goes-here").innerText = user_Name;    //using javascript
+                            //method #2:  insert using jquery
+                            $("#name-goes-here").text(user_Name);                         //using jquery
+                        })
+                } else {
+                    // No user is signed in.
+                }
+            });
+        }
+        insertName();
+    </script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -142,5 +173,8 @@
         </script>
 
 </body>
+
+
+
 
 </html>
